# Grading-LLM

./: .gitignore  README.md  main.py  pyproject.toml  questions_fullInterp.txt  questions_interp.txt  questions_mech.txt  render.yaml  requirements.txt
data/: questions_100.json  questions_20.json  questions_interp.json  questions_mech.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnalyzeTab.tsx  MetricsTable.tsx  PCAPlot3D.tsx  QuestionsTab.tsx  ValueDistribution.tsx  VarianceChart.tsx  VectorHeatmap.tsx
frontend/src/styles/: globals.css
src/grading_llm/: __init__.py  analysis.py  api.py  client.py  config.py  io.py  pca_viz.py  prompts.py  prune_questions.py  questiongen.py  questions.py  report.py  run_batch.py  run_single.py  scales.py  synth_corpus.py
tests/: __init__.py  test_analysis.py  test_prompts.py  test_scales.py
